# boring-code

./: .gitignore  CMakeLists.txt  README.md
src/algor/: graph.c  graph.h  graph_search.c  graph_search.h
src/automatic_speech_recognition/: compare_mfcc.c  compare_mfcc.h  frame_data.c  frame_data.h  mfcc.c  mfcc.h  signal_process.c  signal_process.h  simple_wav.c  simple_wav.h
src/base/: __container.h  __entitiy.h  __hash.c  __hash.h  __hashmap.c  __hashmap.h  __iterator.h  __list.c  __list.h  __rb_tree.c  __rb_tree.h  __sort.c  __sort.h  __type_value.h  __type_value_h.drop_future  __type_value_h.first_version  __vector.c  __vector.h  container_of.h
src/base/operate/: __heap_sort.c  __heap_sort.h  __quick_sort.c  __quick_sort.h  __sort.h  __wring.c  __wring.h
src/base/type_value/: __built_in_type.c  __built_in_type.h  __built_in_type_adapters.c  __built_in_type_adapters.h  __type_value.h  __type_value_def.c  __type_value_def.h
src/complex/: complex.h
src/container/: Cn.h  Cn.h.drop  Cn.h.what   Cont.c  Cont.h  Entity.c  Entity.c.drop  Entity.h  Entity.h.bk  HashSet.h  HashSet.h.drop  Hashmap.h  HashmapComponent.h  It.h  It.h.bk  It.h.gone  Iter.h  LeCn.h  LeCn.h.drop  LeList.h  LeList.h.drop  LinkArray.h  List.h  Map.h  MxQueue.h  Queue.h  RbTree.h  Set.h  Set.h.drop  TreeComponent.h  TreeMap.h  TreeSet.h  Tv.h.drop  Typ.h  Vector.h  Vector.h.drop  cn.c  cn.h  entity.c  entity.h  (+6 more)
src/cosine_Transform.drop/: cosine_transform.c  cosine_transform.h
src/cosine_transform/: cosine_transform.c  cosine_transform.h
src/deep_learning/: active.c  active.h  ann.c  ann.h  ann_cg.c  ann_cg.h  ann_cg_ simulation.c  ann_cg_ simulation.h  ann_cg_simulation.c  ann_cg_simulation.h  cnn.c  cnn.h  lstm.c  lstm.h  rnn.c  rnn.h
src/deep_learning/cg_ann/: cg_ann.c  cg_ann.h  cg_ann_opt.c  cg_ann_opt.h  cg_ann_znode.c  cg_ann_znode.h  dot_opt.c  dot_opt.h
src/deep_learning/cg_ann.del/: cg_ann.h  cg_ann_opt.h
src/deep_learning/compute_garph/: cg_garph.c  cg_garph.h  cg_list.c  cg_list.h  cg_node.h  compute_garph.c  compute_garph.drop.c  readme.md  (+3 more)
src/dp/: lcs.c  lcs.h  readme.md
src/fourier_transform/: fourier_transform.c  fourier_transform.h
src/graph/: graph.c  graph.h  graph_component.h  graph_research.c  graph_research.h  graph_search.c  graph_search.h  ud_graph.c  ud_graph.h  ud_graph_component.h  undirect_graph.c  undirect_graph.h
src/leetcode/: 1775.c  1775.h  37.c  37.h  51.c  51.h  813.c  813.h  891.c  891.h  domino_tromino_tiles.c  domino_tromino_tiles.h  kmp.c  kmp.h  lcs.c  lcs.h  longest_palindrome.c  longest_palindrome.h  permutation_combination.c  permutation_combination.h  readme.md  regexp.c  regexp.h
src/machine_learning/: bayes.c  bayes.h  decision_tree.c  decision_tree.h  knn.c  knn.h  linear_formula.c  linear_formula.h  linear_regression.c  linear_regression.h  logistic_regression.c  logistic_regression.h  neural_network.c  neural_network.h  support_vector_machines.c  support_vector_machines.h
src/machine_learning2/: knn.c  knn.h  matrix2.c  matrix2.h  matrix2_operator.c  matrix2_operator.h  perceptron.c  perceptron.h
src/matrix/: CooMatrix.c  CooMatrix.h  DenseMatrix.c  DenseMatrix.h  __matrix.h  imatrix.h  matrix.c  matrix.h  tsmatrix.c  tsmatrix.h
src/matrix2/: matrix2.c  matrix2.h  matrix2_operator.c  matrix2_operator.h
src/mem_pool/: __mem_pool.c  __mem_pool.h
src/mfcc/: mfcc.c  mfcc.h
src/reinforce_learning/: action.h  agent.c  agent.h  grid_world.c  grid_world.h  neural_network.c  neural_network.h  neural_network_functions.c  neural_network_functions.h  nn.c  nn.h  nn2.c  nn2.h  nn2_znode.c  nn2_znode.h  nn_functions.c  nn_functions.h  policy.c  policy.h  readme.md
src/statistical_learning/: adaboost.c  adaboost.h  counting.c  counting.h  decision_tree.c  decision_tree.h  em.c  em.h  knn.c  knn.h  matrix2.c  matrix2.h  matrix2_count.c  matrix2_count.c.drop  matrix2_count.h  matrix2_count.h.drop  matrix2_operator.c  matrix2_operator.h  matrix2_statistical.h  naive_bayes.c  naive_bayes.h  perceptron.c  perceptron.h  readMe.Md  svm.c  svm.h  svm_kernel_func.c  svm_kernel_func.h
src/string_match/: Readme.md  kmp.c
src/ultra_array/: tensor.c  tensor.h  ultra_array.c  ultra_array.h  ultra_data_chunk.c  ultra_data_chunk.h  ultra_padding.c  ultra_padding.h  ultra_router.c  ultra_router.h  x_array.c  x_array.h
src/unit_test/: cmp_component.h  compare_to_numpy.py  em_test_data.csv  test_data.c  test_data.h  test_rb_tree.c  test_tool.h  unit_test.c  unit_test.h  unit_test_asr.c  unit_test_cg_tensor.c  unit_test_coo_matrix.c  unit_test_dct.c  unit_test_decision_tree.c  unit_test_deep_learning.c  unit_test_dense_matrix.c  unit_test_dft_fft.c  unit_test_dl_cg2.c  unit_test_dp.c  unit_test_graph.c  unit_test_hashmap.c  unit_test_heap_sort.c  unit_test_leetcode.c  unit_test_list.c  unit_test_machine_learning.c  unit_test_machine_learning2.c  unit_test_matrix.c  unit_test_matrix2.c  unit_test_mempool.c  unit_test_neural_network.c  unit_test_reinforce_learning.c  unit_test_set.c  unit_test_statistical_learning.c  unit_test_string_match.c  unit_test_svm.c  unit_test_t.c  unit_test_toutiao.c  unit_test_tv.c  unit_test_udgraph.c  unit_test_ultra_array.c  (+1 more)
src/vtype/: vfloat_type.h
(+96 files in other folders)
